--- a/theorems/templates/theorems/subjects.html
+++ b/theorems/templates/theorems/subjects.html
@@ -13,6 +13,7 @@
                      font:"STIX-web"
             },
             tex2jax: { 
+                skipTags: ["script","noscript","style","textarea","pre","code"],
                 inlineMath:  [ ['$','$']     ,['{$','$}']     , ['\\(','\\)'] ], 
                 displayMath: [ ['$$','$$'] ,['{$$','$$}'] , ['\\[','\\]'] ],
                 processEscapes: true 
@@ -34,6 +35,9 @@
     </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+    <link rel='stylesheet' href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css"/>
     <link rel='stylesheet' href='/static/stylesheets/style.css'>
 </head>
 <body class='homepage'>
@@ -48,10 +52,10 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                    <li><a href='{% url 'theorems:index'  %}'><span class='glyphicon glyphicon-home'></span></a></li>
-                   <li class='active'><a href='{% url 'theorems:subjects'  %}?page=1'>Subjects</a></li>
-                   <li> <a href='{% url 'theorems:definitions'  %}?page=1'>Definitions</a></li>
-                   <li> <a href='{% url 'theorems:theorems'  %}?page=1'>Theorems</a></li>
-                   <li> <a href='{% url 'theorems:questions'  %}?page=1'>Questions</a></li>
+                   <li class='active'><a href='{% url 'theorems:subjects'  %}'>Subjects</a></li>
+                   <li> <a href='{% url 'theorems:definitions'  %}'>Definitions</a></li>
+                   <li> <a href='{% url 'theorems:theorems'  %}'>Theorems</a></li>
+                   <li> <a href='{% url 'theorems:questions'  %}'>Questions</a></li>
                 </ul>
             </div> <!-- navbar -->
         </nav>
@@ -60,96 +64,54 @@
         </header>
         <div class='wrapper'>
             <main>
-              <div class='content'>
                 {% if subjects %}
                 <h3 class='center'>Subjects</h3>
-                <div class='center'>
-                    Subjects {{ subjects.start_index }} &ndash; {{ subjects.end_index }} of {{ subjects.paginator.count }}
-                </div>
-                <ul>
-                {% for subject in subjects %}
-                    <li><a id="sub{{subject.id}}"></a>{{ subject.subject_name  }}
-                        <ul>
-                            <li><a href='{% url 'theorems:subject_theorems' subject.id  %}?page=1'>Theorems</a></li>
-                            <li><a href='{% url 'theorems:subject_definitions' subject.id  %}?page=1'>Definitions</a></li>
-                        </ul>
-                    </li>
-                {% endfor %}
-                </ul>
-                {% endif %}
-              </div>  <!-- content -->           
- 
-              {% if subjects.has_other_pages %} 
-                {% if subjects.has_previous %}
-                <ul class="paging text-center">
-                    <li><a class="btn btn-default" href="?page={{subjects.previous_page_number}}"><span class="glyphicon glyphicon-chevron-left"></span>Previous</a></li>
-                
-                {% else %}
-                <ul class="paging text-center">
-                    <li><a class="btn btn-default disabled" href="#"><span class="glyphicon glyphicon-chevron-left"></span>Previous</a></li>
-                
-                {% endif %}
-
-
-                {% if subjects.has_previous %}
-                  {% if subjects.previous_page_number|add:"-2" > 1 %}
-		      <li><a href="?page=1">1</a></li>
-                      <li>...</li>
-		      <li><a href="?page={{subjects.previous_page_number|add:'-1'}}">{{subjects.previous_page_number|add:"-1"}}</a></li>
-		      <li><a href="?page={{subjects.previous_page_number}}">{{subjects.previous_page_number}}</a></li>
-			      
-		  {% elif subjects.previous_page_number|add:"-1" > 1 %}
-		      <li><a href="?page=1">1</a></li>
-		      <li><a href="?page={{subjects.previous_page_number|add:'-1'}}">{{subjects.previous_page_number|add:"-1"}}</a></li>
-		      <li><a href="?page={{subjects.previous_page_number}}">{{subjects.previous_page_number}}</a></li>
-				      
-		  {% elif subjects.previous_page_number > 1 %}
-		      <li><a href="?page=1">1</a></li>
-		      <li><a href="?page={{subjects.previous_page_number}}">{{subjects.previous_page_number}}</a></li>
-					
-		  {% else %}
-		      <li><a href="?page=1">1</a></li>
-                  {% endif %}
-                {% endif %}
-
-                      <li><a class='disabled btn btn-link' href="#">{{subjects.number}}</a></li>  
-                  
-
-                {% if subjects.has_next %}
-                  {% if subjects.next_page_number|add:"2" < subjects.paginator.num_pages %} 
-
-		      <li><a href="?page={{subjects.next_page_number}}">{{subjects.next_page_number}}</a></li>
-		      <li><a href="?page={{subjects.next_page_number|add:'1'}}">{{subjects.next_page_number|add:"1"}}</a></li>
-		      <li>...</li>
-		      <li><a href="?page={{subjects.paginator.num_pages}}">{{subjects.paginator.num_pages}}</a></li>
-
-		  {% elif subjects.next_page_number|add:"1" < subjects.paginator.num_pages %}
-                      <li><a href="?page={{subjects.next_page_number}}">{{subjects.next_page_number}}</a></li>
-		      <li><a href="?page={{subjects.next_page_number|add:'1'}}">{{subjects.next_page_number|add:"1"}}</a></li>
-		      <li><a href="?page={{subjects.paginator.num_pages}}">{{subjects.paginator.num_pages}}</a></li>
-
-		  {% elif subjects.next_page_number < subjects.paginator.num_pages %}
-                      <li><a href="?page={{subjects.next_page_number}}">{{subjects.next_page_number}}</a></li>
-		      <li><a href="?page={{subjects.paginator.num_pages}}">{{subjects.paginator.num_pages}}</a></li>
-                  {% else %}
-                        <li>{{ subjects.num_pages }}</li>
-                      <li><a href="?page={{subjects.paginator.num_pages}}">{{subjects.paginator.num_pages}}</a></li>
-                  {% endif %}															
-                {% endif %}
-
-                {% if subjects.has_next %}
-                    <li><a class="btn btn-default" href="?page={{subjects.next_page_number}}">Next<span class="glyphicon glyphicon-chevron-right"></span></a></li>
-                </ul>
-                {% else %}
-                    <li><a class="disabled btn btn-default" href="#">Next<span class="glyphicon glyphicon-chevron-right"></span></a></li>
-                </ul>
-                {% endif %}
-              {% endif %}
+                <table id="subTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                      <tr>
+                          <th>Subject</th>
+                          <th>Theorems</th>
+                          <th>Definitions</th>
+                      </tr>
+                    </thead>
+                    <tfoot>
+                      <tr>
+                          <th>Subject</th>
+                          <th>Theorems</th>
+                          <th>Definitions</th>
+                      </tr>
+                    </tfoot>
+                    <tbody>
+                      {% for subject in subjects %}
+                        <tr>
+                            <td><a href="#" id="sub{{subject.id}}"></a>{{subject.subject_name}}</td>
+                            <td><a href="{% url 'theorems:subject_theorems' subject.id %}">theorems</a></td>
+                            <td><a href="{% url 'theorems:subject_definitions' subject.id %}">definitions</a></td>
+                        </tr>
+                      {% endfor %}
+                    </tbody>
+                </table>
+                {% endif %}           
             </main>
         </div> <!-- div.wrapper -->
         <footer>
             Footer
         </footer>
     </div> <!-- div.container -->
+    <script>
+    $(document).ready(function() {
+        $('#subTable').DataTable({
+            "lengthMenu": [10,25,50],
+            "pagingType": "full_numbers"
+        });
+      {% if specific_subject and specific_subject_index %}
+        rpp = $("select[name=subTable_length]").val();
+        rpp = parseInt(rpp);
+        record_index = {{ specific_subject_index }};
+        page = Math.floor(record_index/rpp) + ( record_index % rpp > 0 ? 1 : 0);
+        $('a[data-dt-idx='+ (page + 1)+']')[0].click();
+      {% endif %}
+    });
+</script>
 </body>    
 </html>
