--- a/theorems/templates/theorems/subject_definitions.html
+++ b/theorems/templates/theorems/subject_definitions.html
@@ -33,9 +33,10 @@
             }
         });
     </script>
+	{% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel='stylesheet' href='/static/stylesheets/style.css'>
+    <link rel='stylesheet' href='{% static "theorems/style.css" %}' />
 </head>
 <body class='homepage'>
     <div class='container-fluid'>
