--- a/theorems/templates/theorems/theorem_proof.html
+++ b/theorems/templates/theorems/theorem_proof.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,7 +6,7 @@
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <title>index</title>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'></script> <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_SVG'>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_SVG'&delayStartupUntil=configured'> <!-- delay start until markdown is processed -->
         MathJax.Hub.Config({
             extensions: ["tex2jax.js","TeX/AMSmath.js","TeX/AMSsymbols.js"],
             jax: ["input/TeX", "output/SVG"],
@@ -35,6 +36,29 @@
 	{% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.3.1/markdown-it.min.js"></script>
+    <script src="{% static 'theorems/marked/marked.min.js' %}"></script>
+    <script>
+      $(document).ready(function(){
+          marked.setOptions({
+            renderer: new marked.Renderer(),
+            gfm: true,
+            tables: true,
+            breaks: true,
+            pedantic: false,
+            sanitize: true,
+            smartLists: true,
+            smartypants: false
+        });
+        $(".markdown").each(function(){
+            var renderedHtml = marked($(this).text());
+            $(this).html(renderedHtml);
+            console.log(renderedHtml);
+        });
+      
+        MathJax.Hub.Configured();  //this must be called to start mathjax rendering
+      });
+    </script>
     <link rel='stylesheet' href='{% static "theorems/style.css" %}' />
 </head>
 <body class='homepage'>
@@ -48,11 +72,11 @@
             </div> <!--navbar-header -->
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                   <li><a href='{% url 'theorems:index'  %}'><span class='glyphicon glyphicon-home'></span></a></li>
-                   <li><a href='{% url 'theorems:subjects'  %}?page=1'>Subjects</a></li>
-                   <li> <a href='{% url 'theorems:definitions'  %}?page=1'>Definitions</a></li>
-                   <li class='active'> <a href='{% url 'theorems:theorems'  %}?page=1'>Theorems</a></li>
-                   <li> <a href='{% url 'theorems:questions'  %}?page=1'>Questions</a></li>
+                   <li><a href='{% url 'theorems:index' %}'><span class='glyphicon glyphicon-home'></span></a></li>
+                   <li><a href='{% url 'theorems:subjects' %}'>Subjects</a></li>
+                   <li> <a href='{% url 'theorems:definitions' %}'>Definitions</a></li>
+                   <li class='active'> <a href='{% url 'theorems:theorems' %}'>Theorems</a></li>
+                   <li> <a href='{% url 'theorems:questions'  %}'>Questions</a></li>
                 </ul>
             </div> <!-- navbar -->
         </nav>
@@ -61,17 +85,16 @@
         </header>
         <div class='wrapper'>
             <main>
-              <div class='content'>
                 {% if theorem_name %}
                 <h3 class='center'>{{ theorem_name }}</h3>
-                    <div class="well well-lg">{{ theorem_statement|safe }}</div>
+                    <div class="well well-lg markdown">{{ theorem_statement }}</div>
                 {% for proof in proofs %}
                     {% for deflink in proof.proof_definition_link_set.all %}
                         {% if forloop.first %}
                           <div class="panel panel-default">
                             <div class='panel-heading'>
                               <h4 class='panel-title'>
-                                <a data-toggle="collapse" href='#definitions'>Definitions<span class='caret'></span></a>
+                                <a class="panel-padded" data-toggle="collapse" href='#definitions'>Definitions<span class='caret'></span></a>
                               </h4>
                             </div>
                             <div id='definitions' class='panel-collapse collapse'>
@@ -80,87 +103,33 @@
                                 <div class="panel panel-default">
                                   <div class="panel-heading">
                                     <h4 class='panel-title'>
-                                      <a data-toggle='collapse' href='#def{{deflink.definition.id}}'>{{deflink.definition.definition_name}}<span class='caret'></span></a>
+                                      <a class="panel-padded" data-toggle='collapse' href='#def{{deflink.definition.id}}'>{{deflink.definition.definition_name}}<span class='caret'></span></a>
                                     </h4>
                                   </div>
                                   <div id="def{{deflink.definition.id}}" class='panel-collapse collapse in'>
-                                    <div class='panel-body'>{{deflink.definition.definition|safe}}</div>
+                                    <div class='panel-body markdown'>{{deflink.definition.definition}}</div>
                                   </div>
                                 </div>
                         {% if forloop.last %}</div></div></div>{% endif %}  
                     {% endfor %}
                 <h4>PROOF:</h4>
-                    <div>{{proof.theorem_proof|safe|linebreaksbr}}</div>  
+                    <div class="markdown">{{proof.theorem_proof}}</div>  
                 {% endfor %}
                 
                 {% endif %}
-              </div> <!-- content -->
-
-              {% if proofs.has_other_pages %} 
+	        <ul class='pagination'>
                 {% if proofs.has_previous %}
-                <ul class="paging text-center">
-                    <li><a class="btn btn-default" href="?page={{proofs.previous_page_number}}"><span class="glyphicon glyphicon-chevron-left"></span>Previous</a></li>
-                
-                {% else %}
-                <ul class="paging text-center">
-                  <li><a href="#" class="disabled btn btn-default"><span class="glyphicon glyphicon-chevron-left"></span>Previous</a></li>
-                
-                {% endif %}
-
-
-                {% if proofs.has_previous %}
-                  {% if proofs.previous_page_number|add:"-2" > 1 %}
-		      <li><a href="?page=1">1</a></li>
-                      <li>...</li>
-		      <li><a href="?page={{proofs.previous_page_number|add:'-1'}}">{{proofs.previous_page_number|add:"-1"}}</a></li>
-		      <li><a href="?page={{proofs.previous_page_number}}">{{proofs.previous_page_number}}</a></li>
-			      
-		  {% elif proofs.previous_page_number|add:"-1" > 1 %}
-		      <li><a href="?page=1">1</a></li>
-		      <li><a href="?page={{proofs.previous_page_number|add:'-1'}}">{{proofs.previous_page_number|add:"-1"}}</a></li>
-		      <li><a href="?page={{proofs.previous_page_number}}">{{proofs.previous_page_number}}</a></li>
-				      
-		  {% elif proofs.previous_page_number > 1 %}
-		      <li><a href="?page=1">1</a></li>
-		      <li><a href="?page={{proofs.previous_page_number}}">{{proofs.previous_page_number}}</a></li>
-					
-		  {% else %}
-		      <li><a href="?page=1">1</a></li>
-                  {% endif %}
-                {% endif %}
-
-                      <li><a class='disabled btn btn-link'  href="#">{{proofs.number}}</a></li>  
-                  
-
-                {% if proofs.has_next %}  
-                  {% if proofs.next_page_number|add:"2" < proofs.paginator.num_pages %} 
-
-		      <li><a href="?page={{proofs.next_page_number}}">{{proofs.next_page_number}}</a></li>
-		      <li><a href="?page={{proofs.next_page_number|add:'1'}}">{{proofs.next_page_number|add:"1"}}</a></li>
-		      <li>...</li>
-		      <li><a href="?page={{proofs.paginator.num_pages}}">{{proofs.paginator.num_pages}}</a></li>
-
-		  {% elif proofs.next_page_number|add:"1" < proofs.paginator.num_pages %}
-                      <li><a href="?page={{proofs.next_page_number}}">{{proofs.next_page_number}}</a></li>
-		      <li><a href="?page={{proofs.next_page_number|add:'1'}}">{{proofs.next_page_number|add:"1"}}</a></li>
-		      <li><a href="?page={{proofs.paginator.num_pages}}">{{proofs.paginator.num_pages}}</a></li>
-
-		  {% elif proofs.next_page_number < proofs.paginator.num_pages %}
-                      <li><a href="?page={{proofs.next_page_number}}">{{proofs.next_page_number}}</a></li>
-		      <li><a href="?page={{proofs.paginator.num_pages}}">{{proofs.paginator.num_pages}}</a></li>
-                  {% else %}
-                      <li><a href="?page={{proofs.paginator.num_pages}}">{{proofs.paginator.num_pages}}</a></li>
-                  {% endif %}															
-                {% endif %}
+                    <li><a href="{% url 'theorems:theorem_proof' theorem_id proofs.previous_page_number %}">Previous</a></li>
+		{% else %}
+		    <li class="disabled"><a href="#">Previous</a></li>
+                {% endif %}                  
 
                 {% if proofs.has_next %}
-                    <li><a class="btn btn-default" role='button' href="?page={{proofs.next_page_number}}">Next<span class="glyphicon glyphicon-chevron-right"></span></a></li>
+                    <li><a href="{% url 'theorems:theorem_proof' theorem_id proofs.next_page_number %}">Next</a></li>
+		{% else %}
+		    <li class="disabled"><a href="#">Next</a></li>    
+	        {% endif %}
                 </ul>
-                {% else %}
-                    <li><a class="btn btn-default disabled" role='button' href="#">Next<span class="glyphicon glyphicon-chevron-right"></span></a></li>
-                </ul>
-                {% endif %}
-              {% endif %}
             </main>
         </div> <!-- div.wrapper -->
         <footer>
